--- a/css/style.css
+++ b/css/style.css
@@ -290,6 +290,15 @@ html { box-sizing: content-box !important; }
 /* Knob labels */
 .knob-value-label { font-size: 12px; font-weight: bold; color: inherit; user-select: none; text-align: center; }
 .label-top { display: inline-block; text-align: center; font-size: 12px; margin-bottom: 2px; z-index: 100; }
+.knob-wrapper.label-under {
+  flex-direction: column; /* già di default, ma puoi aggiustare */
+}
+
+.knob-wrapper.label-over {
+  flex-direction: column-reverse; /* se vuoi invertire ordine */
+}
+
+
 
 /* Knob tooltips */
 .bx--tooltip__label { text-align: center; width: 100%; display: block!important; color:#ffffff }
