changed margin under label

--- a/css/style.css
+++ b/css/style.css
@@ -292,9 +292,7 @@ html { box-sizing: content-box !important; }
 .label-top { display: inline-block; text-align: center; font-size: 12px; margin-bottom: 2px; z-index: 100; }
 .knob-wrapper.label-under { flex-direction: column; }
 .knob-wrapper.label-over { flex-direction: column-reverse; }
-.knob-wrapper.label-under .knob-container {
-  margin-bottom: -8px; /* aggiusta il valore fino a che va bene */
-}
+.knob-wrapper.label-under .knob-container { margin-bottom: -13px; }
 
 
 /* Knob tooltips */
