fix discrete label selected positioning

--- a/css/style.css
+++ b/css/style.css
@@ -288,7 +288,7 @@ html { box-sizing: content-box !important; }
 .xlargeknob.thick::after { top: -12px; }
 
 /* Knob labels */
-.knob-value-label { font-size: 12px; font-weight: bold; color: inherit; user-select: none; text-align: center; }
+.knob-value-label { font-size: 12px; font-weight: bold; color: inherit; user-select: none; text-align: center; margin-top: -13px }
 .label-top { display: inline-block; text-align: center; font-size: 12px; margin-bottom: 2px; z-index: 100; }
 .knob-wrapper.label-under { flex-direction: column; }
 .knob-wrapper.label-over { flex-direction: column-reverse; }
