--- a/css/style.css
+++ b/css/style.css
@@ -738,6 +738,7 @@ input[type="color"] { width: 30px; border: 0px; margin:0px; cursor: pointer; pad
 
 .features p {
   color: #717171;
+  font-size:1.25rem;
 }
 
 
