--- a/css/style.css
+++ b/css/style.css
@@ -441,8 +441,8 @@ input[type="color"] { width: 30px; border: 0px; margin:0px; cursor: pointer; pad
 @font-face { font-family: designer; src: url("../fonts/DESIGNER.otf"); }
 @font-face { font-family: woodcutter; src: url("../fonts/woodcutter.ttf"); }
 @font-face { font-family: thebold; src: url("../fonts/thebold.ttf"); }
-
-
+@font-face { font-family: label; src: url("../fonts/Impact\ Label.ttf"); }
+@font-face { font-family: labelreversed; src: url("../fonts/Impact\ Label\ Reversed.ttf"); }
 
 .verified-badge {
   display: inline-flex;
