--- a/css/style.css
+++ b/css/style.css
@@ -836,11 +836,10 @@ input[type="color"] { width: 30px; border: 0px; margin:0px; cursor: pointer; pad
 
 
 
-
 .pedal-catalog .preset-container .preset-dropdown {
-  display: none;
+  display: none; /* chiuso all'inizio */
   position: absolute;
-  bottom: 40px; /* sopra il pulsante */
+  bottom: -36px; /* apre verso il basso se vuoi modificare */
   right: 0;
   width: 150px;
   background-color: #555;
