--- a/css/style.css
+++ b/css/style.css
@@ -859,7 +859,7 @@ input[type="color"] { width: 30px; border: 0px; margin:0px; cursor: pointer; pad
   text-align: left;
 }
 
-.preset-drpdown {
+.preset-dropdown {
   background-color: rgb(46, 46, 46);
   padding: 5px;
   min-width: 200px;
