--- a/css/style.css
+++ b/css/style.css
@@ -867,7 +867,15 @@ input[type="color"] { width: 30px; border: 0px; margin:0px; cursor: pointer; pad
   position: relative;
   left: -180px;
   border-radius: 8px;
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 4px 8px, rgb(30, 30, 30) 0px -36px 0px 0px inset;
+}
+
+.preset-dropdown::before {
+  background: linear-gradient(
+  90deg,
+  rgb(70, 41, 100),
+  rgb(156, 84, 213),
+  rgb(94, 226, 240)
+  );
 }
 
 .pedal-catalog .preset-container .preset-dropdown li:hover {
