--- a/css/style.css
+++ b/css/style.css
@@ -864,8 +864,8 @@ input[type="color"] { width: 30px; border: 0px; margin:0px; cursor: pointer; pad
 /* DROPDOWN */
 .preset-dropdown {
   position: absolute;
-  top: 0;
-  right: 36px; /* apre verso sinistra */
+  top: 25px;
+  right: 4px; /* apre verso sinistra */
   width: 160px;
   background: #444;
   border-radius: 8px;
@@ -878,19 +878,16 @@ input[type="color"] { width: 30px; border: 0px; margin:0px; cursor: pointer; pad
 .preset-dropdown::before {
   content: "";
   position: absolute;
-  inset: -5px;
+  inset: -8px;
   border-radius: 8px;
-
   background: linear-gradient(
     90deg,
     rgb(70, 41, 100),
     rgb(156, 84, 213),
     rgb(94, 226, 240)
   );
-
-  filter: blur(4px);
+  filter: blur(2px);
   opacity: 0.8;
-
   z-index: -1;
   pointer-events: none;
 }
