--- a/css/style.css
+++ b/css/style.css
@@ -882,6 +882,8 @@ input[type="color"] { width: 30px; border: 0px; margin:0px; cursor: pointer; pad
 .new-subplex-btn {
   padding-left: 8px;
   padding-right: 8px;
+  position:relative;
+  top:-5px;
 }
 
 
