changed icons and behaviour toast gear share

--- a/css/style.css
+++ b/css/style.css
@@ -1070,4 +1070,5 @@ input[type="color"] { width: 30px; border: 0px; margin:0px; cursor: pointer; pad
 /* Fix toast swal2 appearance */
 .swal2-toast {
   padding:0em!important;
+  margin: 1em 1em!important;
 }
