--- a/css/style.css
+++ b/css/style.css
@@ -551,6 +551,7 @@ input[type="color"] { width: 30px; border: 0px; margin:0px; cursor: pointer; pad
   /* Generic hide/show desktop*/
   .showDesktop { display: flex !important; }
   .showMobile { display: none !important; }
+  .showBoth { display: flex !important; }
 
 /* =========================
    Mobile / Small screen adjustments
@@ -560,6 +561,7 @@ input[type="color"] { width: 30px; border: 0px; margin:0px; cursor: pointer; pad
   /* Generic hide/show mobile */
   .showDesktop { display: none !important; }
   .showMobile { display: flex !important; }
+  .showBoth { display: flex !important; }
   .showMobile.bx--btn--icon-only {
     width: 2.5rem;   /* 40px */
     height: 2.5rem;  /* 40px */
