--- a/css/style.css
+++ b/css/style.css
@@ -445,6 +445,10 @@ input[type="color"] { width: 30px; border: 0px; margin:0px; cursor: pointer; pad
 @font-face { font-family: labelreversed; src: url("../fonts/Impact\ Label\ Reversed.ttf"); }
 @font-face { font-family: bellarosa; src: url("../fonts/bellarosa.ttf"); }
 @font-face { font-family: acab; src: url("../fonts/AC+AB.ttf"); }
+@font-face { font-family: squealer; src: url("../fonts/Squealer.otf"); }
+@font-face { font-family: squealer_emb; src: url("../fonts/Squealer.otf"); }
+@font-face { font-family: acdc; src: url("../fonts/Squealer.otf"); }
+@font-face { font-family: acdc_emb; src: url("../fonts/Squealer\ Embossed.otf"); }
 
 .verified-badge {
   display: inline-flex;
