--- a/css/style.css
+++ b/css/style.css
@@ -449,6 +449,7 @@ input[type="color"] { width: 30px; border: 0px; margin:0px; cursor: pointer; pad
 @font-face { font-family: squealer_emb; src: url("../fonts/Squealer.otf"); }
 @font-face { font-family: acdc; src: url("../fonts/Squealer.otf"); }
 @font-face { font-family: acdc_emb; src: url("../fonts/Squealer\ Embossed.otf"); }
+@font-face { font-family: western; src: url("../fonts/gomarice_nandaka_western.ttf"); }
 
 .verified-badge {
   display: inline-flex;
