--- a/css/style.css
+++ b/css/style.css
@@ -474,6 +474,7 @@ input[type="color"] { width: 30px; border: 0px; margin:0px; cursor: pointer; pad
 @font-face { font-family: arabic; src: url("../fonts/Arabic.ttf"); }
 @font-face { font-family: news; src: url("../fonts/Newspaper.ttf"); }
 @font-face { font-family: viking; src: url("../fonts/VIKING-N.TTF"); }
+@font-face { font-family: boner; src: url("../fonts/Boner.ttf"); }
 
 .verified-badge {
   display: inline-flex;
